--- a/package.json
+++ b/package.json
@@ -18,5 +18,29 @@
 	"bugs": {
 		"url": "https://github.com/SellBro/sellbro-crm-api/issues"
 	},
-	"homepage": "https://github.com/SellBro/sellbro-crm-api#readme"
+	"homepage": "https://github.com/SellBro/sellbro-crm-api#readme",
+	"devDependencies": {
+		"@types/cors": "^2.8.10",
+		"@types/express": "^4.17.11",
+		"@types/node": "^14.14.35",
+		"@typescript-eslint/eslint-plugin": "^4.18.0",
+		"@typescript-eslint/parser": "^4.18.0",
+		"eslint": "^7.22.0",
+		"eslint-config-airbnb-base": "^14.2.1",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-prettier": "^3.3.1",
+		"prettier": "^2.2.1",
+		"ts-node": "^9.1.1",
+		"ts-node-dev": "^1.1.6",
+		"tsconfig-paths": "^3.9.0",
+		"typescript": "^4.2.3"
+	},
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"pg": "^8.5.1",
+		"typeorm": "^0.2.31"
+	}
 }
