--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/no-floating-promises": 0,
     "import/prefer-default-export": 0,
     "import/no-cycle": 0,
+    "import/extensions": "never",
 
     "prettier/prettier": [
       "error",
