docker-compose.prod

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "sellbro-crm-api",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.x"
+  },
   "description": "sellbro crm api",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "cd src && tsc",
+    "build": "tsc -p .",
     "start:dev": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/index.js",
-    "start:prod": "NODE_PATH=./dist node ./dist/index.js"
+    "start:prod": "NODE_PATH=./dist node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/index.js"
   },
   "repository": {
     "type": "git",
