--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   ts-node-docker: 
     build:
       context: .
+      dockerfile: Dockerfile
       target: base
     volumes: 
       - ./src:/home/node/app/src
